# src/main/java/ru/quick/approval/system/dbcontroller/service/iservice/IUserService.java
@@ -1,5 +1,6 @@
 package ru.quick.approval.system.dbcontroller.service.iservice;
 
+import ru.quick.approval.system.api.model.Role;
 import ru.quick.approval.system.api.model.UserWithoutPassword;
 import java.util.List;
 
@@ -12,5 +13,13 @@ import java.util.List;
 public interface IUserService {
 
     List<UserWithoutPassword> allUsers();
+
+    boolean addUser(UserWithoutPassword newUser);
+
+    boolean addRoleToUserById(int id, Role role);
+
+    UserWithoutPassword getUserById(int id);
+
+    boolean updateUserById(int id, UserWithoutPassword user);
 
 }
